--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "standard": {
     "parser": "babel-eslint"
   },
-  "peerDependencies": {
+  "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-native": "^0.59.5",
